--- a/front/port/src/App.css
+++ b/front/port/src/App.css
@@ -1,51 +1,70 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 650px;
-  width: 450px;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo.react {
-  height: 400px;
-  width: 400px;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+main{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #f0f0f0;
+    width: 100vw;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+.App-header {
+   background-color: #282c34;
+   min-height: 5%;
+   display: flex;
+   flex-direction: row;
+  
+   font-size: calc(10px + 2vmin);
+   color: white;
+   padding: 10px;
+ }
 
-.card {
-  padding: 2em;
-}
+ .logo {
+  display: flex;
+  gap: 15px;
+  color: white;
+  font-size: 15px;
+ }
+ 
+ #img {
+  width: 30px;
+ }
 
-.read-the-docs {
-  color: #888;
-}
+ .content {
+    display: flex;
+    padding: 50px;
+    background-color: #282234;
+ }
+
+ .footer {
+    background-color: #282c34;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+ }
+
+ .projects {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+    padding: 20px;
+    background-color: #212224;
+    flex: 1;
+    
+ }
+ 
+ .proj {
+    width: 150px;
+    height: 200px;
+ }
+
+ .list{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+ }
+
+ .item{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+ }
